# SVI-Bench

./: .gitignore  LICENSE  README.md  dataset_card.md  pyproject.toml
configs/: t1.yaml  t2.yaml  t3.yaml  t4.yaml  t5.yaml  t6.yaml  t7.yaml  t8.yaml  t9.yaml
pretrained/: README.md
scripts/: build_split_bbox_list.py  download.py  download_t7_t8.sh  extract_tars.py
svi_bench/: __init__.py  cli.py
svi_bench/core/: __init__.py  config.py  data.py  metrics.py  models.py
svi_bench/tasks/: __init__.py
svi_bench/tasks/_wan_shared/: README.md  __init__.py
svi_bench/tasks/t1_scene_recognition/: README.md  __init__.py  baseline.py  evaluate.py
svi_bench/tasks/t1_structured_play_description/: README.md  __init__.py  baseline.py  evaluate.py  run.py  train.sh
svi_bench/tasks/t1_structured_play_description/configs/: basketball_100k.yaml  hockey_100k.yaml  soccer_100k.yaml  sports_100k.yaml  sports_25k.yaml  sports_50k.yaml  sports_caption_100k.yaml  sports_qa_100k.yaml
svi_bench/tasks/t1_structured_play_description/eval/: run_caption.sh  run_llm_judge.sh
svi_bench/tasks/t2_fine_grained_action_qa/: README.md  __init__.py  baseline.py  evaluate.py  run.py
svi_bench/tasks/t2_fine_grained_action_qa/eval/: run_qa.sh
svi_bench/tasks/t2_placeholder/: README.md  __init__.py  baseline.py  evaluate.py
svi_bench/tasks/t3_action_recognition/: README.md  __init__.py  baseline.py  evaluate.py
svi_bench/tasks/t3_compositional_video_retrieval/: README.md  __init__.py  analyze.py  baseline.py  evaluate.py  retrieval.py
svi_bench/tasks/t3_compositional_video_retrieval/internvideo2/: DATASET.md  MODEL_ZOO.md  README.md  UPDATES_FOR_T3.md  torchrun.sh
svi_bench/tasks/t4_placeholder/: README.md  __init__.py  baseline.py  evaluate.py
svi_bench/tasks/t4_strategic_reasoning_qa/: .gitignore  README.md  __init__.py  baseline.py  evaluate.py  evaluate.slurm
svi_bench/tasks/t4_strategic_reasoning_qa/dataset/: qa.json  qa_subset.json
svi_bench/tasks/t4_strategic_reasoning_qa/evaluation/: evaluate.py  prompts.py  run.sh
svi_bench/tasks/t4_strategic_reasoning_qa/generation/: blind_filter.py  gemini.py  generate.py  gpt.py  prompt_templates.py  revise.py  supported.py  utils.py
svi_bench/tasks/t5_outcome_forecasting/: .gitignore  README.md  __init__.py  baseline.py  download_data.sh  environment.yaml  evaluate.py
svi_bench/tasks/t5_outcome_forecasting/dataset/: basketball_test.json  hockey_test.json  soccer_test.json
svi_bench/tasks/t5_outcome_forecasting/evaluation/: calc_ce.py  infer_gemini.py  infer_gpt.py  infer_molmo.py  infer_qwen.py  run.sh
svi_bench/tasks/t5_outcome_forecasting/training/: convert_train_to_jsonl.py  train_qwen.sh
svi_bench/tasks/t5_placeholder/: README.md  __init__.py  baseline.py  evaluate.py
svi_bench/tasks/t6_long_form_narrative_synthesis/: .gitignore  README.md  __init__.py  baseline.py  environment.yaml  evaluate.py
svi_bench/tasks/t6_long_form_narrative_synthesis/evaluation/: eval_coverage.py  eval_factual.py  eval_writing.py  run.sh  run_slurm.sh
svi_bench/tasks/t6_long_form_narrative_synthesis/inference/: infer_gemini.py  infer_gpt.py  infer_qwen.py
svi_bench/tasks/t6_long_form_narrative_synthesis/utils/: condense_video_to_1h.py  extract_coverage_facts.py  extract_frames_uniform.py
svi_bench/tasks/t6_placeholder/: README.md  __init__.py  baseline.py  evaluate.py
svi_bench/tasks/t7_deep_game_analysis/: README.md  __init__.py  baseline.py  evaluate.py
svi_bench/tasks/t7_motion_conditioned_generation/: README.md  __init__.py  baseline.py  download_checkpoint.sh  evaluate.py  train.py  train.sh  validate.py
svi_bench/tasks/t7_motion_conditioned_generation/diffsynth/: __init__.py
svi_bench/tasks/t7_motion_conditioned_generation/eval/: README.md  basketball.sh  eval_generated_videos.py  feature_sim.py  run_basketball.sh  run_basketball_featsim.sh  run_soccer.sh  run_soccer_featsim.sh  soccer.sh  split_validation_set.py  video_miou.py
svi_bench/tasks/t7_motion_conditioned_generation/inference/: basketball.py  basketball.sh  infer.py  infer.sh  soccer.py  soccer.sh
svi_bench/tasks/t7_motion_conditioned_generation/scripts/: build_split_bbox_list.py  download_t7_t8.sh
svi_bench/tasks/t8_goal_conditioned_action_generation/: README.md  __init__.py  baseline.py  download_checkpoint.sh  evaluate.py  infer.py  train.sh  validate.py
svi_bench/tasks/t8_goal_conditioned_action_generation/eval/: README.md  basketball.py  basketball.sh  eval_generated_videos.py  feature_sim.py  miou_metric.py  prepare_qa_for_method.py  run_basketball.sh  run_basketball_featsim.sh  run_basketball_goalacc.sh  test_llavaov.py  video_miou.py  video_miou_task2.py
svi_bench/tasks/t8_goal_conditioned_action_generation/inference/: basketball.py  basketball.sh  infer.py  infer.sh
svi_bench/tasks/t8_placeholder/: README.md  __init__.py  baseline.py  evaluate.py
svi_bench/tasks/t9_cross_corpus_agentic_reasoning/: README.md  __init__.py  _t9_root.py  baseline.py  evaluate.py  run_agent.py  run_batch.py
svi_bench/tasks/t9_cross_corpus_agentic_reasoning/agent/: context_manager.py  core.py
svi_bench/tasks/t9_cross_corpus_agentic_reasoning/archs/: gpt5.yaml  gpt5_oracle.yaml  minimax_m2_5.yaml  minimax_m2_5_oracle.yaml  minimax_m2_5_tools.yaml  qwen3_235b.yaml  qwen3_235b_oracle.yaml  qwen3_235b_tools.yaml  qwen3_32b.yaml  qwen3_32b_oracle.yaml  qwen3_omni_30b.yaml  qwen3_omni_30b_oracle.yaml
svi_bench/tasks/t9_cross_corpus_agentic_reasoning/configs/: hyperparameters.yaml  models.yaml  paths.yaml  tools.yaml
svi_bench/tasks/t9_cross_corpus_agentic_reasoning/internvideo2/: DATASET.md  MODEL_ZOO.md  README.md  UPDATES_FOR_T9.md
svi_bench/tasks/t9_cross_corpus_agentic_reasoning/prompts/: gpt5_system_prompt_react.txt  qwen_system_prompt_react.txt  token_limit_prompts.txt
svi_bench/tasks/t9_cross_corpus_agentic_reasoning/scripts/: _judge_utils.py  aggregate_results.py  analyze_results.py  ingest.py  remove_games.py  remove_indices.py  restore_es.py  run_eval.py  setup_env.sh  (+5 more)
svi_bench/tasks/t9_placeholder/: README.md  __init__.py  baseline.py  evaluate.py
(+103 files in other folders)
